--- a/main.html
+++ b/main.html
@@ -57,22 +57,24 @@
                     <div class="carousel-inner" role="listbox">
                         
                         <!--carousel item-->
-                        <div class="item active">
-                            <iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                        <div class="item active" align=center>
+                            <video autoplay loop>
+                                <source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" width="1024" height="552" type="video/mp4">
+                            </video>
                             <div class="carousel-caption">
                                 XXXX
                             </div>
                         </div>
                         <!--carousel item-->
-                        <div class="item">
-                            <iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                        <div class="item" align=center>
+                            <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
                             <div class="carousel-caption">
                                 XXXX
                             </div>
                         </div>
                         <!--carousel item-->
-                        <div class="item">
-                            <iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                        <div class="item" align=center>
+                            <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
                             <div class="carousel-caption">
                                 XXXX
                             </div>
